# connect4_ros

./: README.md  demo.launch.py
.claude/: settings.local.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/connect4_game/lib/connect4_game/: referee_node  (+2 more)
log/: latest_build
src/connect4_game/: package.xml  setup.cfg  setup.py
src/connect4_game/connect4_game/: demo_driver_node.py  referee_node.py  test_actions_node.py  tic_tac_toe_player.py  tic_tac_toe_referee.py
src/connect4_launch/: package.xml  setup.py
src/connect4_launch/connect4_launch/launch/: connect4_launch.py
src/connect4_launch/launch/: connect4_launch.launch.py  connect4_test.launch.py  demo_driver_launch.py  player.launch.py  referee.launch.py  turtle.launch.py
src/connect4_manip/: package.xml  setup.cfg  setup.py
src/connect4_manip/connect4_manip/: arm_manip_node.py  move_and_pick.py  pick_and_drop_action_server.py  pick_and_drop_he.py  pick_and_place_action_server.py  pick_and_place_test.py  reset_board_action_server.py  robotiq_gripper.py  send_moveit_pose.py
src/connect4_msgs/: CMakeLists.txt  package.xml
src/connect4_msgs/action/: PickAndDrop.action  PickAndPlace.action  TurtleDeliver.action
src/connect4_msgs/msg/: DetectedBlock.msg  DetectedBlockArray.msg
src/connect4_perception/: package.xml  setup.cfg  setup.py
src/connect4_perception/connect4_perception/: block_pose_detector_node.py  board_perception_node.py  click_corners.py  find_corners.py  pick_block.py  save_frame.py  send_moveit_pose.py
src/connect4_turtlebotnav/: setup.cfg  setup.py
(+125 files in other folders)
