<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>connect4_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="danie@todo.todo">danie</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>connect4_perception</exec_depend>
  <exec_depend>connect4_game</exec_depend>
  <exec_depend>connect4_turtlebotnav</exec_depend>
  <exec_depend>connect4_manip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
